# eso-download

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
eso_download/: __init__.py  cli.py
scripts/: eso-download.1  eso-download.py
